--- a/membranes.html
+++ b/membranes.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  <!-- Preconnect to external domains for faster loading -->
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+
 	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	<link rel="shortcut icon" href="/favicon.ico" />
@@ -21,7 +25,7 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="css/tiny-slider.css" rel="stylesheet">
+    <link href="css/tiny-slider.css" rel="stylesheet" media="print" onload="this.media=\'all\'">
     <link href="css/style.css" rel="stylesheet">
     <!-- Add AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -915,7 +919,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="image-container" data-aos="zoom-in">
-                        <img src="images/membranes.jpg" alt="Membrane Technologies" class="gallery-img">
+                        <img src="images/membranes.jpg" alt="Membrane Technologies" class="gallery-img" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -987,9 +991,9 @@
     </footer>
     <!-- End Footer Section -->
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/custom.js"></script>
+    <script defer src="js/bootstrap.bundle.min.js"></script>
+    <script defer src="js/tiny-slider.js"></script>
+    <script defer src="js/custom.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
@@ -998,7 +1002,7 @@
             offset: 100
         });
     </script>
-    <script src="js/recaptcha.js"></script>
+    <script defer src="js/recaptcha.js"></script>
     <div class="popup-overlay"></div>
     <div class="image-popup">
         <div class="popup-close"></div>
