--- a/sandmedia.html
+++ b/sandmedia.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  <!-- Preconnect to external domains for faster loading -->
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+
 	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	<link rel="shortcut icon" href="/favicon.ico" />
@@ -21,7 +25,7 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="css/tiny-slider.css" rel="stylesheet">
+    <link href="css/tiny-slider.css" rel="stylesheet" media="print" onload="this.media=\'all\'">
     <link href="css/style.css" rel="stylesheet">
     <!-- Add AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -842,7 +846,7 @@
                         <h2 class="section-title mb-3">Filtration Silica Sand</h2>
                         <p class="lead mb-4">We specialize in processing raw silica sand through multi-stage processes, including washing, attrition, drying, and sieving, to produce high‑purity, well‑graded products. Our silica sand is available in various sizes, meeting US mesh specifications.</p>
                         <div class="image-container mb-4">
-                            <img src="images/silicasand.jpg" alt="Silica sand supplier India UAE – Genoasis" class="gallery-img">
+                            <img src="images/silicasand.jpg" alt="Silica sand supplier India UAE – Genoasis" class="gallery-img" loading="lazy">
                         </div>
                         <div class="table-responsive mt-2">
                             <table class="table table-striped table-bordered">
@@ -887,7 +891,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/filtrationgravel.jpg" alt="Filtration gravel supplier India UAE – Genoasis" class="gallery-img">
+                                    <img src="images/filtrationgravel.jpg" alt="Filtration gravel supplier India UAE – Genoasis" class="gallery-img" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -959,7 +963,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/ionexchangeresins.jpg" alt="Ion exchange resins supplier India UAE – Genoasis" class="gallery-img">
+                                    <img src="images/ionexchangeresins.jpg" alt="Ion exchange resins supplier India UAE – Genoasis" class="gallery-img" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -1017,7 +1021,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/activatedcarbon.jpg" alt="Activated carbon supplier India UAE – Genoasis" class="gallery-img">
+                                    <img src="images/activatedcarbon.jpg" alt="Activated carbon supplier India UAE – Genoasis" class="gallery-img" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -1062,7 +1066,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/anthracite.jpg" alt="Anthracite filtration media supplier India UAE – Genoasis" class="gallery-img">
+                                    <img src="images/anthracite.jpg" alt="Anthracite filtration media supplier India UAE – Genoasis" class="gallery-img" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -1105,7 +1109,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/afm.jpg" alt="Activated filter media AFM supplier India UAE – Genoasis" class="gallery-img">
+                                    <img src="images/afm.jpg" alt="Activated filter media AFM supplier India UAE – Genoasis" class="gallery-img" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -1180,9 +1184,9 @@
     </footer>
     <!-- End Footer Section -->
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/custom.js"></script>
+    <script defer src="js/bootstrap.bundle.min.js"></script>
+    <script defer src="js/tiny-slider.js"></script>
+    <script defer src="js/custom.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
@@ -1191,7 +1195,7 @@
             offset: 100
         });
     </script>
-    <script src="js/recaptcha.js"></script>
+    <script defer src="js/recaptcha.js"></script>
     <div class="popup-overlay"></div>
     <div class="image-popup">
         <div class="popup-close"></div>
